change weekCheck with new data types

--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
             </p>
             <svg id="line-chart" width="1080" height="500"></svg>
 
+            <div id="prediction-chart">
+              <!-- Append prediction chart after week 17 -->
+            </div>
+
             <div id="avg-posts-per-week">
               <h3>Average (mean) posts per week</h3>
               <p>
@@ -284,10 +288,6 @@
                 The rhetmap data originally mirrored the MLA JIL’s Composition & Rhetoric (C/R) listings (2012-2013), then both the C/R and Technical and Business Writing (TBW) listings (2013-2014). It did not begin as a long-term data collection project. In 2014-2015, rhetmap began accepting listings for a donation to a field fund that are not on the MLA JIL. By 2018-2019, direct listings on rhetmap.org now make up approximately 11% of advertisements.. There are thus a few specific limitations to the evolving dataset over time. First, different silos are measured (with some overlap) on the MLA JIL between 2012-2014. While some 2012-2013 TBW jobs are cross-listed in the CR category, not all were. As rhetmap.org began to accept job advertisement submissions in 2014-2015, the project no longer became a direct mirror of the MLA JIL. That said, neither the combined MLA JIL or rhetmap listings are a complete snapshot of the total market. While rhetmap.org maintains a low barrier to job submissions (a small field donation to a fund on the honor system), some jobs will only be listed on sites such as InsideHigherEd, Chronicle, local HR websites, or field listservs. The comparative usefulness of the data, long-term, should be viewed with those concerns in mind.
               </blockquote>
             </div>
-          </section>
-
-          <section id="prediction-chart">
-            
           </section>
         </article>
         
