update content to frame the wiki data more clearly

--- a/index.html
+++ b/index.html
@@ -290,20 +290,22 @@
             </div>
           </section>
         </article>
-        
+        <hr style="margin:6em 0" />
         <article id="job-wiki">
           <section>
             <h2>(Informal) Rhetoric &amp; Composition Job Census</h2>
 
             <p>
-              <strong>Beyond the initial 17 weeks tracked by rhetmap.org, how many jobs are offered each year in Rhetoric and Composition?</strong> <br /><br />This informal census counts the jobs advertised each year by using the <a href="https://academicjobs.wikia.org/" rel="nofollow">Academic Jobs Wiki</a> as its source.
+              <strong>Beyond the initial 17 weeks tracked by rhetmap.org, how many jobs are offered each year in Rhetoric and Composition?</strong> To answer this question, the results below are generated from an informal census count of the jobs advertised each year by using the <a href="https://academicjobs.wikia.org/" rel="nofollow">Academic Jobs Wiki</a> as its source.
             </p>
-
             <p>
               The below charts were generated from scraped data from the 2011-2020 Rhetorican &amp; Composition Academic Job Wiki pages. I modified Ryan Heuser's <a href="https://github.com/quadrismegistus/jobcensus" target="_blank" rel="noopenner">jobcensus</a> repo designed for English Studies. (See my source code here: <a href="https://github.com/lingeringcode/rc-jobcensus" target="_blank" rel="noopenner">rc-jobcensus</a>).
             </p>
             <p>
-              <strong>Note</strong>: Please remember that the latest job year will only reflect the total since it was last scraped. I am also still working out some data-processing quirks, so please consider the below results with that information in mind. If you have any questions, please feel free to contact me.
+              <strong>Note</strong>: Please remember that the latest job year will only reflect the total since it was last scraped. This chart <em>excludes</em> Postdoctoral positions from the recently cross-linked 'Humanities &amp; Social Sceince Postdocs' page in 2020.
+            </p>
+            <p>
+              I am also identifying some data-quirks, so please consider the below results with that information in mind. If you have any questions, please feel free to contact me.
             </p>
 
             <h3>2011-2020: Rhetoric &amp; Composition Jobs Overall (excluding postdocs)</h3>
@@ -311,12 +313,15 @@
               <img src="images/rc-jobs-overall.svg" alt="Chart that conveys an overall decline in the number of all academic positions between 2011 and the current market year." />
               <figcaption>
                 <p>
-                  Chart that conveys an overall decline in the number of all academic positions between 2011 and the current market year. This chart excludes Postdoctoral positions.
+                  Chart that conveys an overall decline in the number of all academic positions between 2011 and the current market year.
                 </p>
               </figcaption>
             </figure>
 
             <h3>2011-2020: Rhetoric &amp; Composition Jobs by Type</h3>
+            <p>
+              <strong>NOTE</strong>: The job-type chart below <em>includes</em> postdoctoral positions from the recently cross-linked 'Humanities &amp; Social Sceince Postdocs' page in 2020. Consequently, moore results that may not be relevant to our discipline may be included below.
+            </p>
             <figure id="job-wiki-overall">
               <img src="images/rc-job-type.svg" alt="Chart that conveys the number of academic positions categorized by its type between 2011 and the current market year. For example, tenure-track, non tenure-track, postdoc, and unknown positions." />
               <figcaption>
@@ -327,6 +332,9 @@
             </figure>
             
             <h3>2011-2020: Rhetoric &amp; Composition Jobs by Field</h3>
+            <p>
+              <strong>NOTE</strong>: The field-type chart below <em>includes</em> postdoctoral positions from the recently cross-linked 'Humanities &amp; Social Sceince Postdocs' page in 2020. Consequently, moore results that may not be relevant to our discipline may be included below.
+            </p>
             <figure id="job-wiki-overall">
               <img src="images/rc-field-alias.svg" alt="Chart that conveys the number of academic positions categorized by their field of study between 2011 and the current market year: rhetoric and composition, generalist, community college, etc." />
               <figcaption>
