--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
             
             <h3>2011-2020: Rhetoric &amp; Composition Jobs by Field</h3>
             <p>
-              <strong>NOTE</strong>: The field-type chart below <em>includes</em> postdoctoral positions from the recently cross-linked 'Humanities &amp; Social Sceince Postdocs' page in 2020. Consequently, moore results that may not be relevant to our discipline may be included below.
+              <strong>NOTE</strong>: The field-type chart below <em>includes</em> postdoctoral positions from the recently cross-linked 'Humanities &amp; Social Sceince Postdocs' page in 2020. Consequently, more results that may not be relevant to our discipline may be included below.
             </p>
             <figure id="job-wiki-overall">
               <img src="images/rc-field-alias.svg" alt="Chart that conveys the number of academic positions categorized by their field of study between 2011 and the current market year: rhetoric and composition, generalist, community college, etc." />
