update ids in html

--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
             <p>
               <strong>NOTE</strong>: The job-type chart below <em>includes</em> postdoctoral positions from the recently cross-linked 'Humanities &amp; Social Sceince Postdocs' page in 2020. Consequently, more results that may not be relevant to our discipline may be included below. Furthermore, this provenance of the data explains the spike in postdoctoral positions in 2020.
             </p>
-            <figure id="job-wiki-overall">
+            <figure id="job-wiki-job-type">
               <img src="images/rc-job-type.svg" alt="Chart that conveys the number of academic positions categorized by its type between 2011 and the current market year. For example, tenure-track, non tenure-track, postdoc, and unknown positions." />
               <figcaption>
                 <p>
@@ -335,7 +335,7 @@
             <p>
               <strong>NOTE</strong>: The field-type chart below <em>includes</em> postdoctoral positions from the recently cross-linked 'Humanities &amp; Social Sceince Postdocs' page in 2020. Consequently, more results that may not be relevant to our discipline may be included below.
             </p>
-            <figure id="job-wiki-overall">
+            <figure id="job-wiki-field">
               <img src="images/rc-field-alias.svg" alt="Chart that conveys the number of academic positions categorized by their field of study between 2011 and the current market year: rhetoric and composition, generalist, community college, etc." />
               <figcaption>
                 <p>
