--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
 
             <h3>2011-2020: Rhetoric &amp; Composition Jobs by Type</h3>
             <p>
-              <strong>NOTE</strong>: The job-type chart below <em>includes</em> postdoctoral positions from the recently cross-linked 'Humanities &amp; Social Sceince Postdocs' page in 2020. Consequently, more results that may not be relevant to our discipline may be included below. Furthermore, this provenance of the data explains the spike in postdoctoral positions in 2020.
+              <strong>NOTE</strong>: The job-type chart below <em>includes</em> postdoctoral positions from the recently cross-linked 'Humanities &amp; Social Science Postdocs' page in 2020. Consequently, more results that may not be relevant to our discipline may be included below. Furthermore, this provenance of the data explains the spike in postdoctoral positions in 2020.
             </p>
             <figure id="job-wiki-job-type">
               <img src="images/rc-job-type.svg" alt="Chart that conveys the number of academic positions categorized by its type between 2011 and the current market year. For example, tenure-track, non tenure-track, postdoc, and unknown positions." />
@@ -339,7 +339,7 @@
               <img src="images/rc-field-alias.svg" alt="Chart that conveys the number of academic positions categorized by their field of study between 2011 and the current market year: rhetoric and composition, generalist, community college, etc." />
               <figcaption>
                 <p>
-                  Chart that conveys the number of academic positions categorized by their field of study between 2011 and the current market year: rhetoric and composition, generalist, community college, etc. The job fields were choosen based on their relevance to broader discipline.
+                  Chart that conveys the number of academic positions categorized by their field of study between 2011 and the current market year: rhetoric and composition, generalist, community college, etc. The job fields were chosen based on their relevance to broader discipline.
                 </p>
               </figcaption>
             </figure>
