update module importing

--- a/index.html
+++ b/index.html
@@ -408,6 +408,8 @@
       </footer>
     </main>
   </div>
+  <script type="module" src="./js/credentials.js"></script>
+  <script type="module" src="./js/racing-bars.js"></script>
   <script type="module" src="./js/gSheetsv4.js"></script>
   <script src="https://apis.google.com/js/api.js"></script>
 </body>
