update with new retrieval method for sheet data

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
   <link rel="stylesheet" type="text/css" href="./css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Lato:300,700" rel="stylesheet" type="text/css">
   <!-- js libs -->
-  <script src="./js/modernizr.custom.79639.js"></script>
-  <script src="./js/d3.v5.min.js"></script>
+  <script src="./js/libs/modernizr.custom.79639.js"></script>
+  <script src="./js/libs/d3.v5.min.js"></script>
+  <script src="./js/libs/papaparse/papaparse.min.js"></script>
 </head>
 <body>
   <div class="container">
@@ -408,9 +409,9 @@
       </footer>
     </main>
   </div>
-  <script type="module" src="./js/credentials.js"></script>
-  <script type="module" src="./js/racing-bars.js"></script>
-  <script type="module" src="./js/gSheetsv4.js"></script>
-  <script src="https://apis.google.com/js/api.js"></script>
+  <!-- <script type="module" src="./js/credentials.js"></script> -->
+  <script type="module" src="./js/1-startData.js"></script>
+  <!-- <script type="module" src="./js/gSheetsv4.js"></script> -->
+  <!-- <script src="https://apis.google.com/js/api.js"></script> -->
 </body>
 </html>
