--- a/index.html
+++ b/index.html
@@ -87,183 +87,8 @@
             </h3>
 
             <table class="table striped">
-              <thead>
-                <tr>
-                  <th class="fifteen">
-                    Season Year
-                  </th>
-                  <th class="fifteen">
-                    Total Posts
-                  </th>
-                </tr>
-              </thead>
-              <tbody>
-
-                <tr>
-                  <td class="fifteen">
-                    2012-2013
-                  </td>
-                  <td class="fifteen">
-                    278
-                  </td>
-                </tr>
-
-                <tr>
-                  <td class="fifteen">
-                    2013-2014
-                  </td>
-                  <td class="fifteen">
-                    318
-                  </td>
-                </tr>
-
-                <tr>
-                  <td class="fifteen">
-                    2014-2015
-                  </td>
-                  <td class="fifteen">
-                    325
-                  </td>
-                </tr>
-
-                <tr>
-                  <td class="fifteen">
-                    2015-2016
-                  </td>
-                  <td class="fifteen">
-                    273
-                  </td>
-                </tr>
-
-                <tr>
-                  <td class="fifteen">
-                    2016-2017
-                  </td>
-                  <td class="fifteen">
-                    243
-                  </td>
-                </tr>
-
-                <tr>
-                  <td class="fifteen">
-                    2017-2018
-                  </td>
-                  <td class="fifteen">
-                    280
-                  </td>
-                </tr>
-
-                <tr>
-                  <td class="fifteen">
-                    2018-2019
-                  </td>
-                  <td class="fifteen">
-                    220
-                  </td>
-                </tr>
-
-                <tr>
-                  <td class="fifteen">
-                    2019-2020
-                  </td>
-                  <td class="fifteen">
-                    203
-                  </td>
-                </tr>
-
-              </tbody>
-            </table>
-
-            <h3>
-              Percentage of season advertised by Jan 3rd:
-            </h3>
-
-            <table class="table striped">
-              <thead>
-                <tr>
-                  <th class="fifteen">
-                    Season Year
-                  </th>
-                  <th class="fifteen">
-                    % Total Posts
-                  </th>
-                </tr>
-              </thead>
-              <tbody>
-
-                <tr>
-                  <td class="fifteen">
-                    2012-2013
-                  </td>
-                  <td class="fifteen">
-                    73.74%
-                  </td>
-                </tr>
-
-                <tr>
-                  <td class="fifteen">
-                    2013-2014
-                  </td>
-                  <td class="fifteen">
-                    73.58%
-                  </td>
-                </tr>
-
-                <tr>
-                  <td class="fifteen">
-                    2014-2015
-                  </td>
-                  <td class="fifteen">
-                    73.23%
-                  </td>
-                </tr>
-
-                <tr>
-                  <td class="fifteen">
-                    2015-2016
-                  </td>
-                  <td class="fifteen">
-                    73.62%
-                  </td>
-                </tr>
-
-                <tr>
-                  <td class="fifteen">
-                    2016-2017
-                  </td>
-                  <td class="fifteen">
-                    73.25%
-                  </td>
-                </tr>
-
-                <tr>
-                  <td class="fifteen">
-                    2017-2018
-                  </td>
-                  <td class="fifteen">
-                    70.71%
-                  </td>
-                </tr>
-
-                <tr>
-                  <td class="fifteen">
-                    2018-2019
-                  </td>
-                  <td class="fifteen">
-                    69.54%
-                  </td>
-                </tr>
-
-                <tr>
-                  <td class="fifteen">
-                    2019-2020
-                  </td>
-                  <td class="fifteen">
-                    77.83%
-                  </td>
-                </tr>
-
-              </tbody>
+              <thead id="seasonal-avgs-head"></thead>
+              <tbody id="tabulated-seasonal-avgs"></tbody>
             </table>
 
           </div>
